--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : Your Name
+title                    : Tyson Russell
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : Your Name
-description              : Your Name - Projects and CV 
+name                     : Tyson Russell
+description              : Tyson Russell - Projects and CV 
 baseurl                  : "/fa25-portfolio-ter5521/" # Set this to your repo name 
 
 # Theme and Style
